# gnuboot

./: .gitignore  .guix-authorizations  Makefile  Makefile.am  README  README.md  autogen.sh  build  build.sh  configure.ac  download  gnutoo.key  guix-revision.sh  index.html.tmpl  lighttpd.conf.tmpl  modify  neox.key  projectname  serve.sh  site.cfg  test.scm  update
artwork/: README.md  (+1 more)
resources/grub-kbd/: .gitignore  Makefile.am  README  colemak.gkb.sha512  configure.ac  deqwertz.gkb.sha512  esqwerty.gkb.sha512  frazerty.gkb.sha512  frdvbepo.gkb.sha512  itqwerty.gkb.sha512  svenska.gkb.sha512  trqwerty.gkb.sha512  ukdvorak.gkb.sha512  ukqwerty.gkb.sha512  usdvorak.gkb.sha512  usqwerty.gkb.sha512
resources/ich9-descriptors/: .gitignore  Makefile.am  README  autogen.sh  configure.ac  ich9_gbe.set  ich9_gbe.spec  ich9_ifd.spec  ich9fdgbe_16m.bin.sha512  ich9fdgbe_16m_ifd.set  ich9fdgbe_16m_ro.bin.sha512  ich9fdgbe_16m_ro_ifd.set  ich9fdgbe_4m.bin.sha512  ich9fdgbe_4m_ifd.set  ich9fdgbe_4m_ro.bin.sha512  ich9fdgbe_4m_ro_ifd.set  ich9fdgbe_8m.bin.sha512  ich9fdgbe_8m_ifd.set  ich9fdgbe_8m_ro.bin.sha512  ich9fdgbe_8m_ro_ifd.set  ich9fdnogbe_16m.bin.sha512  ich9fdnogbe_16m.set  ich9fdnogbe_16m_ro.bin.sha512  ich9fdnogbe_16m_ro.set  ich9fdnogbe_4m.bin.sha512  ich9fdnogbe_4m.set  ich9fdnogbe_4m_ro.bin.sha512  ich9fdnogbe_4m_ro.set  ich9fdnogbe_8m.bin.sha512  ich9fdnogbe_8m.set  ich9fdnogbe_8m_ro.bin.sha512  ich9fdnogbe_8m_ro.set
site/: README  (+22 more)
website/: .gitignore  Makefile.am  README  build.sh  check.sh  configure.ac  contrib.md  download.md  faq.md  footer.include  force-bordeaux-substitute.scm  git.md  haunt.scm  index.html.tmpl  license.md  lighttpd.conf.tmpl  logo-license.md  serve.sh  site.cfg  site.cfg.tmpl  template.include
website-build/: .gitignore  Makefile.am  README  build.sh  check.sh  configure.ac  index.html  lighttpd.conf.tmpl  serve.sh
website-build/patches/: 0001-Add-basic-support-for-texinfo-files.patch  0001-Enable-to-deploy-websites-in-subdirectories.patch
website-build/test/: index.html
website/docs/gnulinux/: encrypted_debian.md  index.md
website/docs/hardware/: c201.md  d510mo.md  index.md  kcma-d8.md  kgpe-d16.md  macbook21.md  r500.md  x200.md
website/docs/install/: c201.md  d945gclf.md  ich9utils.md  r400_external.md  t400_external.md  t500_external.md
website/history/: git-history.dot
website/hwdumps/: license.md
website/img/: LICENSE
website/m4/: 01_manual.m4  02_perl.m4  03_nonguix.m4  03_notguix.m4  04_nonguix.m4  04_notguix.m4  guix.m4  nonguix.m4  notguix.m4
website/modules/builders/: gnuboot.scm
website/news/: MANIFEST  libreboot20131214.md  libreboot20140720.md  libreboot20140903.md  libreboot20150126.md  libreboot20150518.md  news-list.md.include  translations.md
website/pages/: COPYING.md  contact.es.md  contact.md  contrib.md  contribute.es.md  contribute.md  download.md  faq.md  footer.include.tmpl  git.es.md  git.md  global.css  index.es.md  index.md  license.md  logo-license.md  news.md  status.es.md  status.md  template-license.md  template.include
website/pages/docs/: index.es.md  index.md
website/pages/docs/bsd/: freebsd.md  index.md  netbsd.md  openbsd.md
website/pages/docs/depthcharge/: index.md
website/pages/docs/gnulinux/: encrypted_debian.md  grub_boot_installer.md  grub_cbfs.md  grub_hardening.md  guix.md  index.md
website/pages/docs/grub/: index.md
website/pages/docs/hardware/: c201.md  d510mo.md  d945gclf.md  ga-g41m-es2l.md  imac52.md  index.md  kcma-d8.md  kfsn4-dre.md  kgpe-d16.md  mac_address.md  macbook21.md  r400.md  r500.md  t400.md  t500.md  x200.md
website/pages/docs/history/: authors.md  index.md
website/pages/docs/install/: c201.md  d510mo.md  d945gclf.md  ga-g41m-es2l.md  ich9utils.md  index.es.md  index.md  install.md  kgpe-d16.md  r400_external.md  spi.md  t400_external.md  t500_external.md  t60_unbrick.md  version.md  x200_external.md  x60_unbrick.md  x60tablet_unbrick.md
website/pages/docs/misc/: codenames.md  index.md
website/pages/docs/release/: index.md
website/pages/events/: 6-december-2025.xml  index.md
website/pages/events/fsf40/: index.md
website/pages/events/fsf40/DiffieHellman-website/: 0004-x200.patch
website/pages/events/fsf40/chipflasher/: 0010-manual-security-add-section-about-updating-GNU-Boot.patch  0012-manual-security-add-section-on-trusting-hardware.patch  (+1 more)
website/pages/fsf40/: index.md
website/pages/fsf40/DiffieHellman-website/: 0001-index.patch  0002-r400.patch
website/pages/fsf40/chipflasher/: 0001-manual-distinguish-distros-from-the-hardware-they-su.patch  0007-manual-GRUB-images-add-information-about-RAID-partit.patch  0008-manual-GRUB-images-warn-about-potential-removal-of-l.patch  0009-manual-move-security-in-its-own-chapter.patch  0010-manual-security-add-section-about-updating-GNU-Boot.patch  0011-manual-security-add-information-about-installing-GNU.patch  0012-manual-security-add-section-on-trusting-hardware.patch  0013-manual-security-add-instruction-to-check-images-sign.patch  0014-manual-flash-programmers-add-Chipflasher-v2.patch
website/pages/fsf40/logos/: 0001-Add-GNU-Boot-logos-sources-and-use-them-to-generate-.patch
website/pages/fsf40/qemu/: 0001-build-download-Handle-unusable-dev-kvm.patch  0002-manual-Document-how-to-use-GNU-Boot-with-QEMU.patch
website/pages/news/: MANIFEST  libreboot20140605.md  libreboot20150126.md  news.cfg
website/pages/tasks/: index.md
website/static/: global.css  gnuboot.css
website/static/events/: 7-december-2025.xml
website/status/: common.scm  generate-0.1-rc1-markdown-status-table.scm  generate-0.1-rc4-markdown-status-table.scm  generate-coreboot-upstream-status.scm  generate-reproducible-builds-status.scm  generate-upstream-versions.scm  status.es.md.tmpl  status.md.tmpl  status.py  table.scm.sha512
website/status/po/: es.po
website/symlinks/: COPYING.sha512  symlinks.txt  web-symlinks.sha512
website/tasks/: index.md
website/templates/: footer.include.tmpl  sitemap.include  template.include
website/website/builders/: gnuboot.scm
website/website/readers/: untitled.scm
(+339 files in other folders)
